# ClangToolingTests

./: .gitignore  CMakeLists.txt
src/: LoopMatcher.cpp  LoopMatcher.hpp  main.cpp
